# python_webdev_fastapi

./: .gitignore  README.md  pyproject.toml
notes/: 2022-11-09.md
server/: demo.py  main.py  test.db
server/tests/: main_test.py
